# learning-python

bs4-start/: main.py
day-16-classes/: main.py  pyproject.toml
day-17-classes/: main.py
day-18-painting/: main.py  pyproject.toml
oop-coffee-machine-start/: main.py
quiz-game-start/: main.py  question_model.py  quiz_brain.py
