[tool.poetry]
name = "day-16-classes"
version = "0.1.0"
description = ""
authors = ["Markiyan Pyts <markiyan.pyts@osf.digital>"]
readme = "README.md"
packages = [{include = "day_16_classes"}]

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
